--- a/extension/popup.css
+++ b/extension/popup.css
@@ -414,7 +414,7 @@ button#connect:active {
   color: var(--delete-hover-color);
 }
 
-.script-edit {
+.script-inspect {
   font-size: 14px;
   cursor: pointer;
   background: transparent;
@@ -424,7 +424,7 @@ button#connect:active {
   transition: all 0.15s;
 }
 
-.script-edit:hover {
+.script-inspect:hover {
   background: var(--edit-hover-bg);
   color: var(--clojure-blue);
 }
